docs/grammar.ebnf
(* Khora concrete grammar, as implemented by crates/khora-syntax.
   Where this differs from the EBNF in docs/project.md §1.2, the divergence is
   justified in docs/errata.md. Cross-checked against parser/*.rs. *)

Program        ::= ( Declaration )* ;

Declaration    ::= ModuleDecl | ImportDecl | TypeDecl | TraitDecl | ImplDecl
                 | EffectDecl | ContextDecl | FunctionDecl | LetDecl
                 | ConstDecl | TestDecl ;

ModuleDecl     ::= "module" Path ";" ;
ImportDecl     ::= "import" Path "::" "{" ImportList "}" ";" ;  (* no glob `::*` *)
ImportList     ::= ImportItem ( "," ImportItem )* ( "," )? ;
ImportItem     ::= Ident ( "as" Ident )? ;

(* `::` is compile-time namespacing: modules, types, associated items and
   constructors. `.` is runtime projection and never appears here. Errata 13. *)
Path           ::= Ident ( "::" Ident )* ;

(* --- types ------------------------------------------------------------- *)

(* `derive` sits *inside* the declaration and *before* `pub`, which is the
   order the parser takes it in: a reader asking what a type derives should not
   have to look at what came before it in the file. Structural and refusing
   rather than guessing — a field whose type lacks the trait is named. *)
TypeDecl       ::= ( DeriveClause )? ( "pub" )? "type" Ident ( TypeParams )?
                   ( "=" TypeDef )? ";" ;
DeriveClause   ::= "derive" "(" Ident ( "," Ident )* ( "," )? ")" ;

TraitDecl      ::= ( "pub" )? "trait" Ident ( TypeParams )?
                   ( ":" TypeBounds )? "{" ( TraitItem )* "}" ;
ImplDecl       ::= "impl" ( TypeParams )? Type ( "for" Type )?
                   "{" ( TraitItem )* "}" ;   (* without "for": the type's
                                                  own methods *)
(* `pub` on a method of an inherent impl means what it means on a top-level
   declaration: without it, only the declaring module may call it. On a *trait*
   impl it is not read — those methods are the trait's, and are reachable
   wherever the trait is. docs/design/std-surface.md, roadmap 13.11. *)
TraitItem      ::= AssocTypeDecl | FunctionDecl ;
AssocTypeDecl  ::= "type" Ident ( ":" TypeBounds )? ( "=" Type )? ";" ;
TypeBounds     ::= Type ( "+" Type )* ;
TypeDef        ::= VariantType | Type ;

(* An effect is a named set of operations, shaped like a record of functions —
   which is what a capability already was. docs/design/effects.md. *)
EffectDecl     ::= ( "pub" )? "effect" Ident ( TypeParams )?
                   "{" ( Field ( "," Field )* ( "," )? )? "}" ;

TypeParams     ::= "<" TypeParam ( "," TypeParam )* ( "," )? ">" ;
TypeParam      ::= "const" Ident ":" Type
                 | ( "+" | "-" )? Ident ( ":" TypeBounds )?
                 | RowVar ;

TypeArgs       ::= "<" Type ( "," Type )* ( "," )? ">" ;

(* Effect clauses bind to an arrow and only to an arrow. In
   `fn f() -> Report with { .. }` the return type is just `Report` and the
   clause belongs to the declaration; in `f: A -> B with 'e` it belongs to the
   function type. That is what lets both spellings coexist.
   At most one of each clause, `with` first: a second clause was once read
   and silently ignored, so it is a syntax error that names the fix. *)
Type           ::= UnionType ( "->" Type EffectClauses )? ;
UnionType      ::= PrimaryType ( "+" PrimaryType )* ;  (* open error union    *)
EffectClauses  ::= ( WithClause )? ( RaisesClause )? ;
WithClause     ::= "with" Type ;                       (* a capability row    *)
RaisesClause   ::= "raises" Type ;                     (* an error row        *)

PrimaryType    ::= PathType | RecordType | TupleType | ForallType
                 | VariantType | RowVar | IntLiteral ;

PathType       ::= Path ( TypeArgs )? ;
ForallType     ::= "forall" TypeParams "." Type ;      (* `.` is a separator  *)
TupleType      ::= "(" ")"                             (* unit                *)
                 | "(" Type ")"                        (* grouping            *)
                 | "(" Type ( "," Type )+ ( "," )? ")" ;

RecordType     ::= "{" ( Field ( "," Field )* ( "," )? )? ( "|" RowTail )? "}" ;
RowTail        ::= RowElem ( ( "|" | "," ) RowElem )* ;
RowElem        ::= Field | Type ;
Field          ::= Ident ":" Type ;

VariantType    ::= ( "|" Ident ( "(" VariantPayload ")" )? )+ ;
VariantPayload ::= Field ( "," Field )* ( "," )?       (* named payload       *)
                 | Type ( "," Type )* ( "," )? ;       (* positional payload  *)

(* --- functions and bindings --------------------------------------------
   No `=` before a body, and no `;` after it. `{` introduces a definition and
   `;` declares a signature only, which is how std describes intrinsics. *)

(* `extern` says the body is a C symbol found at link time, so the declaration
   ends at `;` rather than a block. A foreign function takes and returns scalars
   and pointers, requires capabilities without receiving them, and cannot raise
   — docs/design/ffi.md, and the compiler checks it. *)
FunctionDecl   ::= ( "pub" )? ( "extern" )? "fn" Ident ( TypeParams )? ParamList
                   ( "->" Type )? EffectClauses ( Block | ";" ) ;

(* A module-level constant. Its initializer is evaluated at compile time. *)
ConstDecl      ::= ( "pub" )? "const" Ident ( ":" Type )? "=" Expr ";" ;
ParamList      ::= "(" ( Param ( "," Param )* ( "," )? )? ")" ;
Param          ::= ( Ident | "_" ) ( ":" Type )? ;

LetDecl        ::= ( "pub" )? "let" ( "mut" )? Pattern ( ":" Type )? "=" Expr ";" ;

(* A named bundle of handlers. Bindings are sequential: each may use the ones
   above it, which keeps service composition flat. *)
ContextDecl    ::= ( "pub" )? "context" Ident
                   "{" ( RecordExprField ( "," RecordExprField )* ( "," )? )? "}" ;

TestDecl       ::= ( "test" | "bench" ) StringLiteral Block ;

(* A block-like expression standing in statement position needs no `;`, as in
   Rust. Without that rule `if c { .. }` mid-block parses as the block's tail
   expression and every statement after it is orphaned. *)
Block          ::= "{" ( Statement )* ( Expr )? "}" ;
Statement      ::= LetDecl | Expr ";" | BlockLikeExpr ;
BlockLikeExpr  ::= IfExpr | MatchExpr | ForExpr | WhileExpr | LoopExpr
                 | WithBlock | Block ;

(* --- expressions -------------------------------------------------------
   Binary operators, loosest to tightest:
     =           right    (assignment; an expression of type unit)
     |>          left
     ||          left
     &&          left
     == != < > <= >=
     + -         left
     * / %       left
   Prefix "-" and "!" bind tighter than any binary operator. Postfix — call,
   `.` field access, `!`, `catch`, `with` — binds tightest of all. *)

Expr           ::= BinaryExpr ;

(* `||> a |> b |> c` is sugar for `fn x => x |> a |> b |> c`, desugared during
   HIR lowering so nothing past that point knows a flow was written. Greedy
   over the pipes that follow it, at the pipe's own precedence rather than a
   second one, so `(||> a) |> b` needs its parentheses.
   docs/design/flow-operator.md. *)
FlowExpr       ::= "||>" Expr ( "|>" Expr )* ;
BinaryExpr     ::= UnaryExpr ( BinOp UnaryExpr )* ;
UnaryExpr      ::= ( "-" | "!" )? PostfixExpr ;

PostfixExpr    ::= PrimaryExpr ( ArgList
                              | "." Ident                  (* projection      *)
                              | "!"                        (* may abort here  *)
                              | "catch" "{" ( MatchArm )+ "}"
                              | "with" ContextRow )* ;
(* A label is the name the callee's declaration gives the parameter at that
   position. It is checked, and moves nothing: arguments bind and evaluate in
   the order written. A function *type* has no names, so a call through a
   value takes no labels, and `_` and `self` are not labels. *)
ArgList        ::= "(" ( Arg ( "," Arg )* ( "," )? )? ")" ;
Arg            ::= ( Ident ":" )? Expr ;

PrimaryExpr    ::= Literal
                 | Path                                 (* `::` path or name  *)
                 | "_"                                   (* pipe placeholder   *)
                 | RecordExpr | TupleExpr | ListExpr
                 | Block | LambdaExpr
                 | IfExpr | MatchExpr | ForExpr | WhileExpr | LoopExpr
                 | FlowExpr | RaiseExpr | HandlerExpr | WithBlock
                 | "break" ( Expr )? | "continue" | "return" ( Expr )? ;

(* `{ ..old, field: value }`: every field the literal does not name is taken
   from the base. The comma after the base is optional, because `{ ..old }` is
   legal and is just `old`. *)
RecordExpr     ::= "{" ( RecordExprBase ( "," )? )?
                   ( RecordExprField ( "," RecordExprField )* ( "," )? )? "}" ;
RecordExprBase ::= ".." Expr ;
RecordExprField::= Ident ":" Expr ;
TupleExpr      ::= "(" ")" | "(" Expr ")" | "(" Expr ( "," Expr )+ ( "," )? ")" ;
(* Inside `[..]` an element may stand for any number of elements. `=>` is
   what marks one: after an `if` or `for` head it is a parse error everywhere
   else, so `[if c { a }]` is still one element, the value of an `if`
   expression. The head is shared with the expression forms and decided by the
   one token after it -- `{` for the expression, `=>` for the element -- with
   record literals off in the condition and iterable, as for the expressions.
   An `else` binds to the nearest `if`. An element form is complete: in
   `[if c => a + 1]` the `+ 1` is part of the element's value. `..` never
   begins an `Expr`, so a spread is only ever an element. *)
ListExpr       ::= "[" ( ListElement ( "," ListElement )* ( "," )? )? "]" ;
ListElement    ::= ListIf | ListFor | ListSpread | Expr ;
ListIf         ::= "if" Expr "=>" ListElement ( "else" ListElement )? ;
ListFor        ::= "for" Pattern "in" Expr "=>" ListElement ;
ListSpread     ::= ".." Expr ;

LambdaExpr     ::= "fn" ( Ident | "_" | ParamList ) "=>" ( Block | Expr ) ;

IfExpr         ::= "if" Expr Block ( "else" ( IfExpr | Block ) )? ;
ForExpr        ::= "for" Pattern "in" Expr Block ;
WhileExpr      ::= "while" Expr Block ;
LoopExpr       ::= "loop" Block ;
MatchExpr      ::= "match" Expr "{" ( MatchArm )+ "}" ;
MatchArm       ::= Pattern ( "if" Expr )? "=>" ( Block | Expr ) ( "," )? ;

(* `raise` performs an operation of the error row; its type is Never, so it may
   appear wherever an expression may. *)
RaiseExpr      ::= "raise" Expr ;
HandlerExpr    ::= "handler" "for" Path RecordExpr ;

(* Handlers must lexically enclose what they serve: in direct style a call
   evaluates immediately, so `|> provide(h)` cannot work. Postfix serves one
   expression; the block form serves a region. *)
WithBlock      ::= "with" ContextRow Block ;
ContextRow     ::= RecordExpr | Path ( RecordExpr )? ;  (* row, or a named
                                                           context with
                                                           overrides *)

(* A `{` opens a record literal when followed by `}` or `Ident :`, and a block
   otherwise. In a `match`, `if` or `while` scrutinee it always opens the
   branch or arm list. Errata 9. *)

(* --- patterns ----------------------------------------------------------- *)

Pattern        ::= "_"
                 | Literal
                 | Ident                                (* binding            *)
                 | Path "(" ( Pattern ( "," Pattern )* )? ")"
                 | Path "{" ( RecordPatField ( "," RecordPatField )* )? "}"
                 | Path                                 (* nullary ctor       *)
                 | "(" ( Pattern ( "," Pattern )* )? ")" ;
RecordPatField ::= Ident ( ":" Pattern )? ;

(* --- lexical ------------------------------------------------------------ *)

Ident          ::= [A-Za-z_] [A-Za-z0-9_]* ;            (* minus keywords     *)
RowVar         ::= "'" Ident ;
Literal        ::= IntLiteral | FloatLiteral | DecimalLiteral | StringLiteral
                 | "true" | "false" ;
IntLiteral     ::= [0-9] [0-9_]* ;
FloatLiteral   ::= IntLiteral "." IntLiteral ( ( "e" | "E" ) ( "+" | "-" )? [0-9]+ )? ;
(* The language's only literal suffix. Nothing may lex between the digits and
   the "d", and the suffix goes after any exponent. docs/design/numbers.md. *)
DecimalLiteral ::= ( IntLiteral | FloatLiteral ) "d" ;
StringLiteral  ::= QuotedString | BacktickString ;
(* `${ Expr }` interpolates. The hole calls `Show` unless it already holds a
   `String`, through a compiler-written node rather than a method call, so
   interpolating something does not require importing the trait that prints it.
   Both string forms interpolate. *)
QuotedString   ::= '"' ( ~["\] | "\" . | Interpolation )* '"' ;
Interpolation  ::= "${" Expr "}" ;
(* Crosses lines, and its indentation is the source's rather than the
   string's. docs/design/multiline-strings.md. *)
BacktickString ::= '`' ( ~[`\] | "\" . | Interpolation )* '`' ;
Comment        ::= "//" ~[\r\n]* | "/*" ( Comment | . )* "*/" ;  (* nesting   *)

(* Hard keywords: never usable as an identifier. This list is the lexer's, and
   `scripts/check-grammar.sh` fails if the two drift apart -- which they had:
   this table named `export` as the visibility keyword, a word the lexer does
   not have and `reference/declarations.md` says outright is not it, and it was
   missing `trait`, `impl`, `for` and `pub` entirely. Roadmap 16. *)
Keyword        ::= "module" | "import" | "type" | "trait" | "impl" | "fn"
                 | "match" | "let" | "mut" | "pub" | "as" | "if" | "else"
                 | "forall" | "const" | "effect" | "with" | "raises" | "raise"
                 | "catch" | "while" | "loop" | "break" | "continue" | "for"
                 | "return" | "true" | "false" ;

(* Contextual keywords: keywords in one position each, ordinary identifiers
   everywhere else, so `fn post(handler: Request -> Response)` is legal. *)
ContextualKeyword
               ::= "handler"  (* only before "for"                        *)
                 | "in"       (* only in a `for` loop's header            *)
                 | "context"  (* only at the start of a declaration       *)
                 | "row"      (* only in a type parameter list            *)
                 | "test"     (* only at the start of a declaration       *)
                 | "bench"    (* only at the start of a declaration       *)
                 | "derive"   (* only at the start of a declaration       *)
                 | "extern" ; (* only before "fn"                         *)

(* Reserved words: refused as an identifier, and meaning nothing yet.

   Khora has no editions and no `unstable` marker, so a keyword added after 1.0
   breaks every program that used the word as a name and there is no mechanism
   to migrate one. Holding a word back costs one name; holding it back
   afterwards is not available at any price.

   These are *not* keywords and appear in no production above. The lexer hands
   each to the parser as an Ident, which is then refused where a name would be
   bound -- so `Ident` above excludes these as well as the keywords, and the
   editor grammar must not color them, because there is nothing to color. *)
ReservedWord   ::= "where"     (* a bound list; typeclasses.md 7        *)
                 | "yield"     (* generators                            *)
                 | "macro"
                 | "unsafe"    (* a marked trusted boundary             *)
                 | "unstable" ; (* the marker the 1.0 freeze has none of *)
