crates/khora-syntax/src/parser/exprs.rs
//! Expression grammar.
//!
//! Binary operators are parsed with a Pratt loop; `|>` sits at the bottom of
//! the table so a pipeline binds looser than everything it carries.
//!
//! Dotted access is deliberately *not* folded into a single path node here.
//! `Effect.map`, `report.risk` and `RiskLevel.Low` are all `FIELD_EXPR` chains
//! at the CST level, exactly as the "universal dot" rule describes; deciding
//! which is a module path, a constructor or a record projection is name
//! resolution's job during HIR lowering.

use super::decls::param_list;
use super::patterns::pattern;
use super::types::{name, name_ref, path};
use super::{CompletedMarker, Parser};
use crate::kind::SyntaxKind::{self, *};

/// Left and right binding powers. Left < right means left-associative;
/// left > right means right-associative.
fn bin_power(kind: SyntaxKind) -> Option<(u8, u8)> {
    let bp = match kind {
        // Assignment is right-associative and binds loosest, so `x = a |> b`
        // assigns the whole pipeline. `let` handles its own `=` before calling
        // in here, so there is no ambiguity with a binding.
        EQ => (2, 1),
        PIPE_GT => (3, 4),
        PIPE_PIPE => (5, 6),
        AMP_AMP => (7, 8),
        EQ_EQ | BANG_EQ | LT | GT | LT_EQ | GT_EQ => (9, 10),
        PLUS | MINUS => (11, 12),
        STAR | SLASH | PERCENT => (13, 14),
        _ => return None,
    };
    Some(bp)
}

pub(super) fn expr(p: &mut Parser<'_>) -> Option<CompletedMarker> {
    expr_bp(p, 0)
}

fn expr_bp(p: &mut Parser, min_bp: u8) -> Option<CompletedMarker> {
    // The descent's one recursive spine. Guarded here rather than at each
    // nesting construct, because every one of them reaches an expression.
    if !p.descend() {
        return None;
    }
    let answer = expr_bp_inner(p, min_bp);
    p.leave();
    answer
}

fn expr_bp_inner(p: &mut Parser, min_bp: u8) -> Option<CompletedMarker> {
    let mut lhs = unary_expr(p)?;
    loop {
        let op = p.current();
        let Some((l_bp, r_bp)) = bin_power(op) else { break };
        if l_bp <= min_bp {
            break;
        }
        if !p.tick() {
            break;
        }
        let m = lhs.precede(p);
        p.bump(op);
        let kind = match op {
            PIPE_GT => PIPE_EXPR,
            EQ => ASSIGN_EXPR,
            _ => BIN_EXPR,
        };
        if expr_bp(p, r_bp).is_none() {
            p.error("expected an expression after the operator");
        }
        lhs = m.complete(p, kind);
    }
    Some(lhs)
}

fn unary_expr(p: &mut Parser<'_>) -> Option<CompletedMarker> {
    if p.at(PIPE_PIPE_GT) {
        return flow_expr(p);
    }
    if p.at(MINUS) || p.at(BANG) {
        let m = p.start();
        p.bump_any();
        if unary_expr(p).is_none() {
            p.error("expected an operand");
        }
        return Some(m.complete(p, PREFIX_EXPR));
    }
    postfix_expr(p)
}

/// `||> a |> b |> c` — the flow operator.
///
/// **Greedy over the pipes that follow it.** Every `|>` after the first stage
/// belongs to the flow, which is the only reading that makes the operator
/// worth having: it exists for multi-stage pipelines, and one that stopped at
/// the first stage would need parentheses at every use. Piping the *function*
/// somewhere else is the rare case and is what parentheses are for:
/// `(||> a) |> b`.
///
/// Each stage is parsed at `PIPE_GT`'s own left binding power, so the stage
/// grabs everything that binds tighter than a pipe and stops at the next one.
/// That is how `||> enrich(config) |> save` and `||> a + 1` both come out the
/// way they read, and it is the existing precedence rather than a second one.
fn flow_expr(p: &mut Parser<'_>) -> Option<CompletedMarker> {
    const STAGE: u8 = 3;

    let m = p.start();
    p.bump(PIPE_PIPE_GT);

    if expr_bp(p, STAGE).is_none() {
        // Named for what was written, not for the lambda it would have become:
        // the desugaring is an implementation detail and a reader cannot act
        // on it.
        p.error("expected the first stage of the pipeline after `||>`");
        return Some(m.complete(p, FLOW_EXPR));
    }

    while p.at(PIPE_GT) {
        if !p.tick() {
            break;
        }
        p.bump(PIPE_GT);
        if expr_bp(p, STAGE).is_none() {
            p.error("expected a pipeline stage after `|>`");
            break;
        }
    }

    Some(m.complete(p, FLOW_EXPR))
}

fn postfix_expr(p: &mut Parser<'_>) -> Option<CompletedMarker> {
    let mut lhs = primary_expr(p)?;
    loop {
        if !p.tick() {
            break;
        }
        lhs = match p.current() {
            L_PAREN => {
                let m = lhs.precede(p);
                arg_list(p);
                m.complete(p, CALL_EXPR)
            }
            DOT if p.nth_at(1, IDENT) => {
                let m = lhs.precede(p);
                p.bump(DOT);
                name_ref(p);
                m.complete(p, FIELD_EXPR)
            }
            // `expr!` — this call can abort the enclosing function. Marking it
            // is a deliberate divergence from Koka; see docs/design/effects.md.
            //
            // **Not after a block-like expression**, for the reason postfix
            // `with` above gives: `if c { .. }` is a statement, and what
            // follows it on the next line starts a new one. `!` is the only
            // postfix operator that is *also* a prefix operator, so without
            // this guard `if c { 0 } else { 1 }` followed by `!x` read as one
            // expression and reported the function's own opening brace as
            // never closed -- an error four lines from the text that caused
            // it. Every other postfix token (`-`, `(`, `.`, `[`, `*`, `|>`)
            // already starts a new statement there.
            //
            // Found by the generated-input suite,
            // `khora-syntax/tests/parser_properties.rs`.
            BANG if !is_block_like(lhs.kind()) => {
                let m = lhs.precede(p);
                p.bump(BANG);
                m.complete(p, TRY_EXPR)
            }
            CATCH_KW => {
                let m = lhs.precede(p);
                p.bump(CATCH_KW);
                let brace = p.open(L_BRACE);
                p.with_record_literals(|p| {
                    while !p.at(R_BRACE) && !p.at(EOF) {
                        if !p.tick() {
                            break;
                        }
                        match_arm(p);
                    }
                });
                p.close(R_BRACE, brace);
                m.complete(p, CATCH_EXPR)
            }
            // Postfix `with` installs handlers over a *value*. A block-like
            // expression is a statement, so `with { a } { .. }` followed by
            // another `with` block is two statements, not one installed over
            // the other — the same rule that lets `if c { .. }` stand without
            // a `;`. Parenthesize to mean the other thing.
            WITH_KW if !is_block_like(lhs.kind()) => {
                let m = lhs.precede(p);
                p.bump(WITH_KW);
                context_row(p);
                m.complete(p, WITH_EXPR)
            }
            _ => break,
        };
    }
    Some(lhs)
}

fn arg_list(p: &mut Parser<'_>) {
    let m = p.start();
    p.bump(L_PAREN);
    // Record literals are always fine inside parentheses; the suppression
    // applies only to an unparenthesized `match` scrutinee.
    p.with_record_literals(|p| {
        while !p.at(R_PAREN) && !p.at(EOF) {
            if !p.tick() {
                break;
            }
            // `name: value`. Two tokens of lookahead, the same the record
            // literal test uses; no expression starts with `IDENT :`, so this
            // takes nothing that parsed before.
            //
            // `_:` gets its own error. The generic path reads `_` as the pipe
            // placeholder, stops at the `:`, and reports `expected )` there
            // and a cascade after it, none of which says what was wrong.
            if p.at(UNDERSCORE) && p.nth_at(1, COLON) {
                let l = p.start();
                p.err_and_bump("`_` is not a label: a label is the name of the parameter it is written against");
                p.bump(COLON);
                if expr(p).is_none() {
                    p.error("expected an argument after the label");
                }
                l.complete(p, LABELED_ARG);
            } else if p.at(IDENT) && p.nth_at(1, COLON) {
                let l = p.start();
                name(p);
                p.bump(COLON);
                if expr(p).is_none() {
                    p.error("expected an argument after the label");
                }
                l.complete(p, LABELED_ARG);
            } else if expr(p).is_none() {
                p.err_and_bump("expected an argument");
            }
            if !p.eat(COMMA) {
                break;
            }
        }
    });
    p.expect(R_PAREN);
    m.complete(p, ARG_LIST);
}

fn primary_expr(p: &mut Parser<'_>) -> Option<CompletedMarker> {
    let cm = match p.current() {
        INT_LIT | FLOAT_LIT | DECIMAL_LIT | STRING_LIT | CHAR_LIT | TRUE_KW | FALSE_KW => {
            let m = p.start();
            p.bump_any();
            m.complete(p, LITERAL_EXPR)
        }
        UNDERSCORE => {
            let m = p.start();
            p.bump(UNDERSCORE);
            m.complete(p, PLACEHOLDER_EXPR)
        }
        IDENT if at_handler_expr(p) => handler_expr(p),
        IDENT => {
            // A `::` chain is part of the path itself; `.` is handled by the
            // postfix loop as field access, so the two never blur.
            let m = p.start();
            path(p);
            m.complete(p, PATH_EXPR)
        }
        L_PAREN => paren_or_tuple_expr(p),
        L_BRACK => list_expr(p),
        L_BRACE => {
            if at_record_literal(p) {
                record_expr(p)
            } else {
                block(p)
            }
        }
        FN_KW => lambda_expr(p),
        RAISE_KW => raise_expr(p),
        WHILE_KW => while_expr(p),
        FOR_KW => for_expr(p),
        LOOP_KW => loop_expr(p),
        BREAK_KW => jump_expr(p, BREAK_KW, BREAK_EXPR),
        CONTINUE_KW => jump_expr(p, CONTINUE_KW, CONTINUE_EXPR),
        RETURN_KW => jump_expr(p, RETURN_KW, RETURN_EXPR),
        WITH_KW => with_block(p),
        IF_KW => if_expr(p),
        MATCH_KW => match_expr(p),
        _ => return None,
    };
    Some(cm)
}

/// `{` is a record literal when it is empty or starts with `name:`; otherwise
/// it opens a block. Inside a `match` scrutinee it always opens the arm list.
fn at_record_literal(p: &mut Parser<'_>) -> bool {
    p.record_literals_allowed()
        && p.at(L_BRACE)
        && (p.nth_at(1, R_BRACE)
            // `{ ..old, field: value }` — a record update, which is a record
            // literal that says where the rest of it comes from.
            || p.nth_at(1, DOT_DOT)
            || (p.nth_at(1, IDENT) && p.nth_at(2, COLON)))
}

/// `{ a: 1, b: 2 }`, and `{ ..old, b: 2 }`.
///
/// **The base comes first and only once**, which is the whole of the syntax:
/// every field it does not name comes from `old`, and a field named twice is
/// an error rather than a last-one-wins. Written this way because it is what a
/// reader of Rust or JavaScript already knows, and because three people
/// reached for it unprompted before it existed — one of them writing forty
/// lines of near-identical five-field literals where five would have done.
fn record_expr(p: &mut Parser<'_>) -> CompletedMarker {
    let m = p.start();
    let brace = p.open(L_BRACE);

    if p.at(DOT_DOT) {
        let base = p.start();
        p.bump(DOT_DOT);
        if expr(p).is_none() {
            p.error("expected the record to take the rest of the fields from");
        }
        base.complete(p, RECORD_EXPR_BASE);
        // A base with no fields after it is `{ ..old }`, which is `old`. Legal
        // and pointless, so the comma is optional rather than required.
        p.eat(COMMA);
    }

    while !p.at(R_BRACE) && !p.at(EOF) {
        if !p.tick() {
            break;
        }
        let f = p.start();
        name(p);
        p.expect(COLON);
        if expr(p).is_none() {
            p.error("expected a field value");
        }
        f.complete(p, RECORD_EXPR_FIELD);
        if !p.eat(COMMA) {
            break;
        }
    }
    p.close(R_BRACE, brace);
    m.complete(p, RECORD_EXPR)
}

fn list_expr(p: &mut Parser<'_>) -> CompletedMarker {
    let m = p.start();
    p.bump(L_BRACK);
    p.with_record_literals(|p| {
        while !p.at(R_BRACK) && !p.at(EOF) {
            if !p.tick() {
                break;
            }
            if expr(p).is_none() {
                p.err_and_bump("expected a list element");
            }
            if !p.eat(COMMA) {
                break;
            }
        }
    });
    p.expect(R_BRACK);
    m.complete(p, LIST_EXPR)
}

fn paren_or_tuple_expr(p: &mut Parser<'_>) -> CompletedMarker {
    let m = p.start();
    p.bump(L_PAREN);
    if p.eat(R_PAREN) {
        return m.complete(p, UNIT_EXPR);
    }
    let mut arity = 0usize;
    let mut saw_comma = false;
    p.with_record_literals(|p| {
        while !p.at(R_PAREN) && !p.at(EOF) {
            if !p.tick() {
                break;
            }
            if expr(p).is_none() {
                p.err_and_bump("expected an expression");
            }
            arity += 1;
            if p.eat(COMMA) {
                saw_comma = true;
            } else {
                break;
            }
        }
    });
    p.expect(R_PAREN);
    if arity == 1 && !saw_comma {
        m.complete(p, PAREN_EXPR)
    } else {
        m.complete(p, TUPLE_EXPR)
    }
}

/// `fn x => e`, `fn _ => e`, `fn (a, b) => e`
fn lambda_expr(p: &mut Parser<'_>) -> CompletedMarker {
    let m = p.start();
    p.bump(FN_KW);
    if p.at(L_PAREN) {
        param_list(p);
    } else {
        let list = p.start();
        bare_lambda_param(p);
        // **`fn acc, row =>` is one mistake, and without this it is a dozen
        // diagnostics.** The comma ends the one-parameter form, so the `=>`
        // that follows is never found, the enclosing call is never closed, and
        // everything after the comma is read as a fresh declaration -- twelve
        // errors for the observed case, the first of them `expected =>` and
        // none of them naming the brackets. Absorbing the rest of the list
        // here costs a diagnostic that cannot fire for legal source (a lambda
        // body is a single expression, so a comma can never follow the one
        // parameter) and puts the parser back at the `=>` it expected.
        if p.at(COMMA) {
            p.error(
                "a lambda with more than one parameter needs parentheses around them: \
                 `fn (a, b) => ...`",
            );
            while p.eat(COMMA) {
                if !p.tick() {
                    break;
                }
                bare_lambda_param(p);
            }
        }
        list.complete(p, PARAM_LIST);
    }
    p.expect(FAT_ARROW);
    lambda_or_arm_body(p);
    m.complete(p, LAMBDA_EXPR)
}

/// One parameter of a lambda written without parentheses.
fn bare_lambda_param(p: &mut Parser<'_>) {
    let param = p.start();
    match p.current() {
        IDENT => name(p),
        UNDERSCORE => p.bump(UNDERSCORE),
        _ => p.error("expected a lambda parameter"),
    }
    param.complete(p, PARAM);
}

/// After `=>` a `{` means a block unless it looks like a record literal.
fn lambda_or_arm_body(p: &mut Parser<'_>) {
    p.with_record_literals(|p| {
        if p.at(L_BRACE) && !at_record_literal(p) {
            block(p);
        } else if expr(p).is_none() {
            p.err_and_bump("expected an expression");
        }
    });
}

/// The row supplied to a handler installation: a record literal, a named
/// context, or a named context with overrides.
///
/// Because contexts are rows, `Production { ai: stub }` is row update — the
/// same operation the type system already performs on capability rows.
fn context_row(p: &mut Parser<'_>) {
    p.with_record_literals(|p| {
        let mut found = false;
        // Several, comma-separated: `with MyDatabase, SystemClock { .. }`.
        // Each is a whole capability rather than a field of one, which is why
        // they are paths in a list and not a row.
        while p.at(IDENT) {
            let m = p.start();
            path(p);
            m.complete(p, PATH_EXPR);
            found = true;
            if !p.eat(COMMA) {
                break;
            }
        }
        // A named context may stand alone (`expr with Mock`), carry overrides
        // (`expr with Mock { ai: stub }`), or be replaced by a bare row.
        if at_record_literal(p) {
            record_expr(p);
            found = true;
        }
        if !found {
            p.error("expected a handler row or a named context");
        }
    });
}

/// Expressions that end in a block, and so stand as statements without a
/// trailing `;` — the same rule Rust uses. Without this, `if c { .. }` in the
/// middle of a block would be read as the block's tail expression and
/// everything after it would be orphaned.
fn is_block_like(kind: SyntaxKind) -> bool {
    matches!(
        kind,
        IF_EXPR | MATCH_EXPR | WHILE_EXPR | FOR_EXPR | LOOP_EXPR | WITH_BLOCK | BLOCK
    )
}

/// True where an expression cannot continue, so `break`, `continue` and
/// `return` know whether a value follows them.
fn at_expr_end(p: &Parser<'_>) -> bool {
    p.at_any(&[SEMICOLON, R_BRACE, R_PAREN, R_BRACK, COMMA, EOF])
}

/// `while cond { .. }`
/// `for x in xs { .. }`
///
/// The iterable is parsed with record literals suppressed, exactly as a `while`
/// condition is: otherwise the `{` opening the body would be read as the start
/// of a record.
fn for_expr(p: &mut Parser<'_>) -> CompletedMarker {
    let m = p.start();
    p.bump(FOR_KW);
    pattern(p);
    if p.at_contextual(IN_KW) {
        p.bump_contextual(IN_KW);
    } else {
        p.error("expected `in` after the loop variable, as `for x in xs { .. }`");
    }
    p.without_record_literals(|p| {
        if expr(p).is_none() {
            p.error("expected something to iterate over");
        }
    });
    if p.at(L_BRACE) {
        block(p);
    } else {
        p.error("expected `{` with the loop body");
    }
    m.complete(p, FOR_EXPR)
}

fn while_expr(p: &mut Parser<'_>) -> CompletedMarker {
    let m = p.start();
    p.bump(WHILE_KW);
    p.without_record_literals(|p| {
        if expr(p).is_none() {
            p.error("expected a condition");
        }
    });
    if p.at(L_BRACE) {
        block(p);
    } else {
        p.error("expected `{` after the condition");
    }
    m.complete(p, WHILE_EXPR)
}

/// `loop { .. }` — exited with `break`, which may carry the loop's value.
fn loop_expr(p: &mut Parser<'_>) -> CompletedMarker {
    let m = p.start();
    p.bump(LOOP_KW);
    if p.at(L_BRACE) {
        block(p);
    } else {
        p.error("expected `{` after `loop`");
    }
    m.complete(p, LOOP_EXPR)
}

/// `break`, `break expr`, `continue`, `return`, `return expr`.
///
/// These transfer control non-locally, so crossing a handler boundary has to
/// unwind and run finalizers exactly as a raise does — see D1.
fn jump_expr(p: &mut Parser, keyword: SyntaxKind, kind: SyntaxKind) -> CompletedMarker {
    let m = p.start();
    p.bump(keyword);
    if !at_expr_end(p) && keyword != CONTINUE_KW && expr(p).is_none() {
        p.error("expected a value");
    }
    m.complete(p, kind)
}

/// `raise expr` — performs an operation of the error row. Its type is `Never`,
/// so it may appear wherever an expression may.
fn raise_expr(p: &mut Parser<'_>) -> CompletedMarker {
    let m = p.start();
    p.bump(RAISE_KW);
    if expr(p).is_none() {
        p.error("expected an error value to raise");
    }
    m.complete(p, RAISE_EXPR)
}

/// True at the `handler` of `handler for E { .. }`.
///
/// Both words are contextual, so the test is "the identifier `handler`,
/// followed by another identifier". Two adjacent identifiers are never an
/// expression otherwise — Khora has no juxtaposition — so this cannot capture a
/// variable called `handler`, and looking past `for` rather than requiring it
/// keeps the "expected `for`" diagnostic for `handler Ledger { .. }`.
fn at_handler_expr(p: &Parser<'_>) -> bool {
    // `for` became a hard keyword when the `for` loop landed, so it is no
    // longer an IDENT and has to be looked for by name.
    p.at_contextual(HANDLER_KW) && (p.nth_at(1, IDENT) || p.nth_at(1, FOR_KW))
}
